--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.datasource.url=jdbc:h2:file:./algorithms.db
 spring.jpa.defer-datasource-initialization=true
 spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.show-sql = true
