Implemented Kanye Quotes on startup as an example of RestTemplate wrapping OkHTTP and calling an external API.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,9 @@ spring.datasource.url=jdbc:h2:file:./algorithms.db
 spring.jpa.defer-datasource-initialization=true
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto = create-drop
-spring.jpa.show-sql = true
+spring.jpa.show-sql = false
+
+#Client Configuration
+interview.client.kanye-client-u-r-l.scheme=https
+interview.client.kanyeClientURL.base-url = api.kanye.rest
+interview.client.kanye-client-u-r-l.resourcePath = /
