Added a bunch of classes and tests, changed around the structure a bit, and added some bean utilities for good interview questions.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,9 @@ spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.show-sql = false
 
+#actuator configuration settings
+management.endpoints.web.exposure.include=*
+
 #Client Configuration
 interview.client.kanye-client-u-r-l.scheme=https
 interview.client.kanyeClientURL.base-url = api.kanye.rest
