Updated client and added tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ management.endpoints.web.exposure.include=*
 interview.client.kanye-client-u-r-l.scheme=https
 interview.client.kanyeClientURL.base-url = api.kanye.rest
 interview.client.kanye-client-u-r-l.resourcePath = /
+
+#Logging
+logging.level.root=DEBUG
