--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,6 @@ interview.client.kanye-client-u-r-l.resourcePath = /
 
 #Logging
 logging.level.root=DEBUG
+
+#Web3jj
+web3j.client-address = http://localhost:8545
