Building successfully now after a few changes to a faulty test.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,18 @@
+#Application Properties
+api.version = 1.0
+api.name = Interview API
+api.description = A cool example API to be used during interviews or for reference, or whatever.
+web3j.client-address = http://localhost:8545
+#https://goerli.infura.io/v3/b36d89adfe41409fb985cc5d71841480
+#http://localhost:8545
+web3j.admin-key = "atom chief document favorite similar give bronze eyebrow bike grass genius reopen"
 #spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.datasource.url=jdbc:h2:file:./algorithms.db
 spring.jpa.defer-datasource-initialization=true
 spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql = false
 
 #actuator configuration settings
