--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,6 @@
 api.version = 1.0
 api.name = Interview API
 api.description = A cool example API to be used during interviews or for reference, or whatever.
-web3j.client-address = http://localhost:8545
-#https://goerli.infura.io/v3/b36d89adfe41409fb985cc5d71841480
-#http://localhost:8545
-web3j.admin-key = "atom chief document favorite similar give bronze eyebrow bike grass genius reopen"
 #spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
@@ -28,3 +24,7 @@ logging.level.root=DEBUG
 
 #Web3jj
 web3j.client-address = http://localhost:8545
+# https://rpc.goerli.mudit.blog
+web3j.admin-key = atom chief document favorite similar give bronze eyebrow bike grass genius reopen
+web3j.admin-password = password
+web3j.network-id=5
