--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
 	</properties>
 	<dependencies>
 		<dependency>
+			<groupId>org.twitter4j</groupId>
+			<artifactId>twitter4j-stream</artifactId>
+			<version>4.0.6</version>
+		</dependency>
+		<dependency>
 			<groupId>org.web3j</groupId>
 			<artifactId>web3j-spring-boot-starter</artifactId>
 			<version>1.6.0</version>
