--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,10 @@ web3j.client-address = http://localhost:8545
 web3j.admin-key = atom chief document favorite similar give bronze eyebrow bike grass genius reopen
 web3j.admin-password = password
 web3j.network-id=5
+
+#TwitterAPI
+interview.client.twitter.api-key=c57MJGbOekuoReNUTXIEFsgKZ
+interview.client.twitter.api-secret=fimK6SPYRK41cHvHVFj4SFNXiLuvVlfrWE5b5BiXQYuXaOIGa9
+interview.client.twitter.token=83694095-0CPmyCcdsaTHh5x7lwb1LYJIpEqfzwjqzGS4Pojag
+interview.client.twitter.token-secret=qrm91cgjZGI57FEKVvdBfa7sTNexVq6th8N3jCeu8TfoT
+interview.client.twitter.url=htt
