--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,4 +34,9 @@ interview.client.twitter.api-key=c57MJGbOekuoReNUTXIEFsgKZ
 interview.client.twitter.api-secret=fimK6SPYRK41cHvHVFj4SFNXiLuvVlfrWE5b5BiXQYuXaOIGa9
 interview.client.twitter.token=83694095-0CPmyCcdsaTHh5x7lwb1LYJIpEqfzwjqzGS4Pojag
 interview.client.twitter.token-secret=qrm91cgjZGI57FEKVvdBfa7sTNexVq6th8N3jCeu8TfoT
-interview.client.twitter.url=htt
+
+#TwilioAPI
+interview.client.twilio.account-sid=AC4736677a0ae98186f911b860fc15c634
+interview.client.twilio.auth-token=7fc4aa58a233ec61dd0d9806d389770f
+interview.client.twilio.messaging-service-sid=MGb42c35cdef787512b8bf71ed58fa2daf
+interview.client.twilio.phone-number=+14632637131
