--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,20 @@ interview.client.kanye-client-u-r-l.scheme=https
 interview.client.kanyeClientURL.base-url = api.kanye.rest
 interview.client.kanye-client-u-r-l.resourcePath = /
 
+#Client Configuration
+interview.client.meme-client-u-r-l.email=${IMGFLIP_USERNAME}
+interview.client.meme-client-u-r-l.password=${IMGFLIP_KEY}
+interview.client.meme-client-u-r-l.scheme=https
+interview.client.meme-client-u-r-l.base-url = api.imgflip.com
+interview.client.meme-client-u-r-l.resourcePath = /
+interview.client.meme-client-url.get-memes-path= get_memes
+interview.client.meme-client-url.caption-image-path= caption_image
+interview.client.meme-client-url.search-memes-path= search_memes
+interview.client.meme-client-url.auto-meme-path= automeme
+interview.client.meme-client-url.ai-meme-path= ai_meme
+interview.client.meme-client-url.get-top-path= popular-meme-ids
+
+
 #Logging
 logging.level.root=DEBUG
 
