--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ api.description = A cool example API to be used during interviews or for referen
 #spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.datasource.url=jdbc:h2:file:./algorithms.db
+spring.datasource.url=jdbc:h2:file:./interview.db
 spring.jpa.defer-datasource-initialization=true
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto = update
@@ -34,7 +34,7 @@ interview.client.meme-client-url.get-top-path= popular-meme-ids
 
 
 #Logging
-logging.level.root=DEBUG
+logging.level.root=TRACE
 
 #Web3jj
 web3j.client-address = http://localhost:8545
