--- a/src/main/resources/application-heroku.properties
+++ b/src/main/resources/application-heroku.properties
@@ -16,13 +16,15 @@ spring.mvc.view.suffix=.jsp
 spring.mvc.favicon.enabled=true
 
 # Use Postgres on Heroku
-spring.datasource.url=${JDBC_DATABASE_URL:jdbc:postgresql://localhost:5432/alvonellos-interview}
+spring.datasource.url=${JDBC_DATABASE_URL:jdbc:postgresql://localhost:5432/alvonellos-com}
 spring.datasource.username=${JDBC_DATABASE_USERNAME:postgres}
 spring.datasource.password=${JDBC_DATABASE_PASSWORD:postgres}
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL9Dialect
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.maxActive=20
+spring.datasource.maxIdle=5
+spring.datasource.minIdle=2
+spring.datasource.initialSize=5
+spring.datasource.removeAbandoned=true
 
 # Naming strategy
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
