--- a/src/main/resources/application-heroku.properties
+++ b/src/main/resources/application-heroku.properties
@@ -16,7 +16,7 @@ spring.mvc.view.suffix=.jsp
 spring.mvc.favicon.enabled=true
 
 # Use Postgres on Heroku
-spring.datasource.url=${JDBC_DATABASE_URL:jdbc:postgresql://localhost:5432/alvonellos-com}
+spring.datasource.url=${JDBC_DATABASE_URL:jdbc:postgresql://localhost:5432/alvonellos-interview}
 spring.datasource.username=${JDBC_DATABASE_USERNAME:postgres}
 spring.datasource.password=${JDBC_DATABASE_PASSWORD:postgres}
 spring.datasource.driverClassName=org.postgresql.Driver
