--- a/src/main/resources/application-heroku.properties
+++ b/src/main/resources/application-heroku.properties
@@ -4,7 +4,7 @@
 # Set the configuration for the application
 application.description=Interview API
 api.version=0.0.1
-logging.level.org.springframework=TRACE
+logging.level.org.springframework=DEBUG
 server.port=${PORT:8080}
 
 # ===============================
