--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -15,6 +15,11 @@ pipeline {
         kubeconfig = credentials("${params.clusterId}") // Use the ID of the Kubernetes credential
     }
 
+
+   tools {
+        maven "Maven"
+    }
+
     stages {
         stage('Build') {
             steps {
