--- a/pom.xml
+++ b/pom.xml
@@ -19,26 +19,6 @@
 	</properties>
 	<dependencies>
 		<dependency>
-			<groupId>com.maxmind.geoip2</groupId>
-			<artifactId>geoip2</artifactId>
-			<version>3.0.1</version>
-		</dependency>
-		<dependency>
-			<groupId>com.twilio.sdk</groupId>
-			<artifactId>twilio</artifactId>
-			<version>9.0.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.twitter4j</groupId>
-			<artifactId>twitter4j-stream</artifactId>
-			<version>4.0.6</version>
-		</dependency>
-		<dependency>
-			<groupId>org.web3j</groupId>
-			<artifactId>web3j-spring-boot-starter</artifactId>
-			<version>1.6.0</version>
-		</dependency>
-		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-math3</artifactId>
 			<version>3.6.1</version>
@@ -110,11 +90,6 @@
 			<scope>test</scope>
 		</dependency>
 
-        <dependency>
-            <groupId>com.squareup.okhttp3</groupId>
-            <artifactId>okhttp</artifactId>
-            <version>5.0.0-alpha.10</version>
-        </dependency>
 
 		<dependency>
 			<groupId>org.jsoup</groupId>
@@ -124,7 +99,7 @@
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <version>RELEASE</version>
+            <version>7.3.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -149,14 +124,12 @@
 			<artifactId>utilities</artifactId>
 			<version>1.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>de.siegmar</groupId>
+			<artifactId>logback-gelf</artifactId>
+			<version>3.0.0</version>
+		</dependency>
     </dependencies>
-<repositories>
-	<repository>
-		<id>maven-nexus-repo</id>
-		<name>maven-nexus-repo</name>
-		<url>https://nexus.home.alvonellos.com/repository/maven-nexus-repo/</url>
-	</repository>
-</repositories>
 
 	<build>
 		<plugins>
