--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.datasource.url=jdbc:h2:file:./interview.db
 spring.jpa.defer-datasource-initialization=true
 spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.show-sql = false
 
 #actuator configuration settings
@@ -20,4 +20,4 @@ management.endpoints.web.exposure.include=*
 
 
 #Logging
-logging.level.root=TRACE
+logging.level.root=ERROR
